--- a/cmdb/templates/cmdb/add_asset.html
+++ b/cmdb/templates/cmdb/add_asset.html
@@ -27,10 +27,11 @@
             <div class="col-md-12">
               <form role="form" action="" method="post" class="form-horizontal">
                 {% csrf_token %}
-                {% bootstrap_field form.sn layout="horizontal" %}
-                {% bootstrap_field form.ip layout="horizontal" %}
-                {% bootstrap_field form.os layout="horizontal" %}
+                {% bootstrap_field form.hostname layout="horizontal" %}
+{#                {% bootstrap_field form.ip layout="horizontal" %}#}
+                {% bootstrap_field form.memory layout="horizontal" %}
                 {% bootstrap_field form.asset_type layout="horizontal" %}
+                {% bootstrap_field form.cpu_cores layout="horizontal" %}
                 {% bootstrap_field form.group layout="horizontal" %}
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
