--- a/cmdb/templates/cmdb/asset.html
+++ b/cmdb/templates/cmdb/asset.html
@@ -25,14 +25,14 @@
                     <thead>
                     <tr>
                       <th class="text-center">主机名</th>
-                      <th class="text-center">IP 地址</th>
-                      <th class="text-center">资产类型</th>
-                      <th class="text-center">操作系统</th>
+                      <th class="text-center">IP</th>
+                      <th class="text-center">类型</th>
+                      <th class="text-center">系统</th>
                       <th class="text-center">系统版本</th>
                       <th class="text-center">内存</th>
                       <th class="text-center">CPU</th>
                       <th class="text-center">磁盘</th>
-                      <th class="text-center">资产序列号</th>
+                      <th class="text-center" style="width:10%">sn</th>
                       <th class="text-center">更新时间</th>
                       <th class="text-center">操作</th>
                     </tr>
@@ -41,14 +41,20 @@
                     {% for asset in assets %}
                       <tr class="text-center">
                         <td>{{ asset.hostname }}</td>
-                        <td>{{ asset.ip.all }}</td>
+                        <td>
+                            <ul class="list-unstyled">
+                            {% for ip in asset.ip.all %}
+                                <li>{{ ip.ip_address }}</li>
+                            {% endfor %}
+                            </ul>
+                        </td>
                         <td>{{ asset.get_asset_type_display }}</td>
                         <td>{{ asset.os }}</td>
                         <td>{{ asset.os_version }}</td>
                         <td>{{ asset.memory }}</td>
                         <td>{{ asset.cpu_cores }}</td>
                         <td>{{ asset.disk_total }}</td>
-                        <td>{{ asset.sn }}</td>
+                        <td style="width:10%">{{ asset.sn }}</td>
                         <td>{{ asset.update_date }}</td>
                         <td>
                             <a href="{% url 'cmdb:asset-detail' asset.id %}" class="btn btn-xs btn-info">详情</a>
